InstanceVPCA.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Creating EC2 instances and security Groups'

Parameters:
  SSHLocation:
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
    Default: 0.0.0.0/0
    Description: The IP address range that can be used to access the web server using SSH.
    MaxLength: '18'
    MinLength: '9'
    Type: String

  ExportVPC:
    Description: The name of the vpc stack that exports values
    Type: String  

Resources:
  VPCAPublicEC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-08f32efd140b7d89f
      InstanceType: t2.micro  
      KeyName: L00179364      
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      Tags:
      - Key: Name
        Value: Jump-Box            
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVPC}-PublicSubnetID
      SecurityGroupIds:
        - !GetAtt EC2PublicSecurityGroup.GroupId

  VPCAPrivateEC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-08f32efd140b7d89f
      InstanceType: t2.micro  
      KeyName: L00179364      
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      Tags:
      - Key: Name
        Value: VPCAPrivateEC2            
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVPC}-PrivateSubnetID
      SecurityGroupIds:
        - !GetAtt EC2PrivateSecurityGroup.GroupId

  EC2PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 VPCA Private Subnet
      VpcId:
        Fn::ImportValue: !Sub ${ExportVPC}-VPCID
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 100.100.0.0/24   
      - IpProtocol: ICMP
        FromPort: -1
        ToPort: -1
        CidrIp: 100.200.1.0/24   

  EC2PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 VPCA Public Subnet
      VpcId: 
        Fn::ImportValue: !Sub ${ExportVPC}-VPCID   
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref SSHLocation
